--- a/app/src/main/res/drawable/ic_empty_library.xml
+++ b/app/src/main/res/drawable/ic_empty_library.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#000000"
-        android:pathData="M18,2H6c-1.1,0 -2,0.9 -2,2v16c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4c0,-1.1 -0.9,-2 -2,-2zM9,4h6v5l-3,-2.25L9,9V4zM18,20H6V4h1v9l3,-2.25L13,13V4h5v16z"/>
+        android:fillColor="#FFFFFF"
+        android:pathData="M18,2H6C4.9,2 4,2.9 4,4v16c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4C20,2.9 19.1,2 18,2zM9,4h6v5l-3,-2.25L9,9V4zM18,20H6V4h1v6.63l3.54,-2.65c0.27,-0.2 0.64,-0.2 0.91,0L15,10.63V4h3V20z"/>
 </vector>
