--- a/app/src/main/res/layout/dialog_add_tag.xml
+++ b/app/src/main/res/layout/dialog_add_tag.xml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.textfield.TextInputLayout
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp">
+    app:cardBackgroundColor="@color/dark_surface"
+    app:cardCornerRadius="12dp"
+    app:strokeColor="@color/neon_pink"
+    app:strokeWidth="1dp">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/edit_tag_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/tag_name"
-        android:inputType="text"
-        android:maxLines="1" />
+        android:orientation="vertical"
+        android:padding="16dp">
 
-</com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/tag_name"
+            app:boxBackgroundColor="@color/chip_background_dark"
+            app:boxStrokeColor="@color/neon_blue"
+            app:hintTextColor="@color/neon_blue">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_tag_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:maxLines="1"
+                android:textColor="@color/white" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
