--- a/app/src/main/res/drawable/ic_empty_library.xml
+++ b/app/src/main/res/drawable/ic_empty_library.xml
@@ -1,10 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="80dp"
+    android:height="80dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportHeight="24"
+    android:tint="@color/neon_blue">
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M18,2H6C4.9,2 4,2.9 4,4v16c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4C20,2.9 19.1,2 18,2zM9,4h6v5l-3,-2.25L9,9V4zM18,20H6V4h1v6.63l3.54,-2.65c0.27,-0.2 0.64,-0.2 0.91,0L15,10.63V4h3V20z"/>
+        android:fillColor="@color/neon_blue"
+        android:pathData="M4,6H2v14c0,1.1 0.9,2 2,2h14v-2H4V6z"/>
+    <path
+        android:fillColor="@color/neon_blue"
+        android:pathData="M20,2H8C6.9,2 6,2.9 6,4v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4C22,2.9 21.1,2 20,2zM20,16H8V4h12V16z"/>
+    <path
+        android:fillColor="@color/neon_blue"
+        android:pathData="M12,5.5v6l4.5,-3z"/>
 </vector>
